--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-tz-1-v-2-0",
+  "homepage" : "https://oiptpio.github.io/react-tz-1-v-2-0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +12,9 @@
   },
   "scripts": {
     "start": "PORT=5000 react-scripts start",
-    "build": "PORT=5001 react-scripts build",
-    "test": "PORT=5002 react-scripts test",
-    "eject": "PORT=5003 react-scripts eject"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
