changed package and yarn.lock

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-tz-1-v-2-0",
-  "homepage" : "https://oiptpio.github.io/react-tz-1-v-2-0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://oiptpio.github.io/react-tz-1-v-2-0",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
@@ -14,7 +15,9 @@
     "start": "PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
